// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge tone: action renders correctly 1`] = `
<div>
  <span
    class="css-uf6c7q-boxStyles-Text-NotificationBadge"
  >
    5
  </span>
</div>
`;

exports[`NotificationBadge tone: neutral renders correctly 1`] = `
<div>
  <span
    class="css-yljgqv-boxStyles-Text-NotificationBadge"
  >
    5
  </span>
</div>
`;
